[package]
name = "mqtt_labelmaker"
version = "0.1.0"
authors = ["Tim Bodeit <tim@bodeit.com>"]
edition = "2018"

[dependencies]
# logging
log = "0.4"
env_logger = "0.8"
# error handling
quick-error = "2"
failure = "0.1"
# template rendering
serde = "1"
serde_json = "1"
handlebars = "3"
headless_chrome = "0.9"
lazy_static = "1"
tempfile = "3"
# http server
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
routerify = { git = "https://github.com/seanpianka/routerify.git" }
regex = "1"
